--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
