feat(service-api): complete full service API integration including fetch, detail, and list

--- a/.hintrc
+++ b/.hintrc
@@ -25,6 +25,12 @@
           "text-size-adjust"
         ]
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
     ]
   }
 }
